--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,6 +23,11 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Get current date
+        id: date
+        run: |
+          echo "DATE=$(date -u +'%Y%m%d')" >> $GITHUB_ENV
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
@@ -32,4 +37,4 @@ jobs:
           tags: |
             ghcr.io/vizmo-vms/deepface:latest
             ghcr.io/vizmo-vms/deepface:${{ github.run_id }}-${{ github.sha }}
-            ghcr.io/vizmo-vms/deepface:$(date +'%Y%m%d')
+            ghcr.io/vizmo-vms/deepface:${{ env.DATE }}
